fix -> | home -> promo_block -> wrap | cta -> [sizes scroll, add key events] | cert -> [add cursors, hover images] | contacts -> add cursor | add gestures cursors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2524,6 +2524,7 @@ select[class="filterSelect"] {
     /* identical to box height, or 34px */
     letter-spacing: -0.01em;
     color: #ACB6C3;
+    cursor: pointer;
 }
 
 .featuresBlockTab .featuresBlockTabItem.__Active {
